--- a/nmtp-front/package.json
+++ b/nmtp-front/package.json
@@ -11,9 +11,13 @@
   },
   "dependencies": {
     "@nuxt/eslint": "^1.9.0",
+    "@nuxt/icon": "^2.1.0",
     "eslint": "^9.38.0",
     "nuxt": "^4.1.3",
     "vue": "^3.5.22",
     "vue-router": "^4.6.3"
+  },
+  "devDependencies": {
+    "@iconify-json/tabler": "^1.2.23"
   }
 }
