--- a/nmtp-front/package.json
+++ b/nmtp-front/package.json
@@ -13,6 +13,7 @@
     "@nuxt/eslint": "^1.9.0",
     "@nuxt/icon": "^2.1.0",
     "eslint": "^9.38.0",
+    "gsap": "^3.13.0",
     "nuxt": "^4.1.3",
     "vue": "^3.5.22",
     "vue-router": "^4.6.3"
