--- a/nmtp-front/package.json
+++ b/nmtp-front/package.json
@@ -15,6 +15,7 @@
     "eslint": "^9.38.0",
     "gsap": "^3.13.0",
     "nuxt": "^4.1.3",
+    "nuxt-auth-utils": "^0.5.25",
     "vue": "^3.5.22",
     "vue-router": "^4.6.3"
   },
