--- a/nmtp-front/package.json
+++ b/nmtp-front/package.json
@@ -7,11 +7,13 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "start": "node -r dotenv/config .output/server/index.mjs"
   },
   "dependencies": {
     "@nuxt/eslint": "^1.9.0",
     "@nuxt/icon": "^2.1.0",
+    "dotenv": "^17.2.3",
     "eslint": "^9.38.0",
     "gsap": "^3.13.0",
     "nuxt": "^4.1.3",
