--- a/nmtp-front/package.json
+++ b/nmtp-front/package.json
@@ -8,7 +8,9 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
-    "start": "node -r dotenv/config .output/server/index.mjs"
+    "start": "node -r dotenv/config .output/server/index.mjs",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "dependencies": {
     "@nuxt/eslint": "^1.9.0",
